--- a/digitalmarket/animatestyle.css
+++ b/digitalmarket/animatestyle.css
@@ -1,6 +1,6 @@
 /* +++++++++++++++++++++++ NAVBAR STYLING +++++++++++++++++++++++++*/
 
-/* Style navbar items */
+/* ANIMATE  navbar items */
 @keyframes scale-up-center {
     0% {
       transform: scale(0.5);
@@ -16,4 +16,19 @@
 
 
 
-  
+/* ANIMATE DROP DOWN MENU  */
+
+ @keyframes styledropdown {
+  0% {
+    transform: scaleY(0.4);
+    transform-origin: 100% 0%;
+  }
+  100% {
+    transform: scaleY(1);
+    transform-origin: 100% 0%;
+  }
+}
+
+.styledropdown {
+	animation: styledropdown 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
