--- a/digitalmarket/animatestyle.css
+++ b/digitalmarket/animatestyle.css
@@ -1,6 +1,6 @@
 /* +++++++++++++++++++++++ NAVBAR STYLING +++++++++++++++++++++++++*/
 
-/* ANIMATE  navbar items */
+/* ANIMATE  NAVBAR ITEMS */
 @keyframes scale-up-center {
     0% {
       transform: scale(0.5);
@@ -31,4 +31,117 @@
 
 .styledropdown {
 	animation: styledropdown 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+
+
+/* SIGNIN AND LOGIN */
+
+
+ @keyframes slide-fwd-center {
+  0% {
+    transform: translateZ(0);
+  }
+  100% {
+    transform: translateZ(160px);
+  }
+}
+
+div.slide-fwd-center:hover {
+	animation: slide-fwd-center 0.45s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+
+
+/* ANIMATE UNLEASH */
+
+
+ @keyframes rotate-vert-center {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+
+span.rotate-vert-center {
+	animation: rotate-vert-center 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+
+
+/* ANIMATE GET STARTED BUTTON */
+
+ @keyframes shake-horizontal {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60% {
+    transform: translateX(10px);
+  }
+  80% {
+    transform: translateX(8px);
+  }
+  90% {
+    transform: translateX(-8px);
+  }
+}
+
+
+#shake-horizontal:hover {
+	animation: shake-horizontal 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+
+
+@keyframes slide-in-blurred-left {
+  0% {
+    transform: translateX(-1000px) scaleX(2.5) scaleY(0.2);
+    transform-origin: 100% 50%;
+    filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+.slide-in-blurred-left {
+	animation: slide-in-blurred-left 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+}
+
+
+
+ @keyframes slide-in-blurred-right {
+  0% {
+    transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+    transform-origin: 0% 50%;
+    filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+
+.slide-in-blurred-right {
+	animation: slide-in-blurred-right 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
