--- a/doorenterprise/style.css
+++ b/doorenterprise/style.css
@@ -8,7 +8,18 @@
 @font-face {
       font-family:crimsonreg;
       src: url(fonts/crimson_regular.ttf);
-}  
+}
+
+@font-face {
+      font-family: playwritein;
+      src: url(../doorenterprise/fonts/PlaywriteIN-Regular.ttf);
+}
+
+@font-face {
+      font-family: robomono;
+      src: url(../doorenterprise/fonts/RobotoMono-Regular.ttf);
+}
+
 
 
 /* =========  DESIGNING PART ===========  */
@@ -64,6 +75,16 @@ body{
       box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
 }
 
+
+#upperhead{
+      font-family: playwritein;
+      text-shadow: 0px 0px 9px rgba(0,0,0,0.7);
+}
+
+#lowerhead{
+      font-family: robomono ; 
+      text-shadow: 0px 0px 9px rgba(0,0,0,0.7);
+} 
 
 
 
