--- a/doorenterprise/style.css
+++ b/doorenterprise/style.css
@@ -104,6 +104,8 @@ body{
       padding: 20px;
       text-align: left;
       position: relative;
+      top: 100px;
+      
     }
     .related-works h1 {
       color: #C18847; /* Brown color for "Works" */
@@ -131,6 +133,7 @@ body{
 .image-menu {
       display: flex;
       overflow-x: hidden;
+      overflow-y: hidden;
       scroll-behavior: smooth;
       scrollbar-width: thin;
     }
@@ -142,6 +145,11 @@ body{
     .image-menu img:hover {
       transform: scale(1.1);
     }
+
+    .slideshadow{
+      box-shadow: 0px 0px 5px  black;
+    }
+
     .arrow-btn {
       display: flex;
       align-items: center;
