--- a/doorenterprise/style.css
+++ b/doorenterprise/style.css
@@ -80,7 +80,7 @@ body{
 
 /* SECOND BANNER */
 
-#secondbanner{
+#msecondbanner{
        -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
       -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
       box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.75);
@@ -89,12 +89,18 @@ body{
 #uppertext{
       font-family: playwritein;
       text-shadow: 0px 0px 9px rgba(0,0,0,0.7);
-      
+      font-size:250%;
+      position: relative;
+      top: -400px;  
 }
 
 #lowertext{
       font-family: robomono ; 
       text-shadow: 0px 0px 9px rgba(0,0,0,0.7);
+      font-size:larger;
+      position: relative;
+      top: -350px;
+
 } 
 
 /*    RELATED WORK */
@@ -104,8 +110,6 @@ body{
       padding: 20px;
       text-align: left;
       position: relative;
-      top: 100px;
-      
     }
     .related-works h1 {
       color: #C18847; /* Brown color for "Works" */
@@ -130,26 +134,25 @@ body{
     }
 
 /* SLIDE MENU  */
+
+#mobileslider{
+      display: none;
+}
 .image-menu {
       display: flex;
       overflow-x: hidden;
-      overflow-y: hidden;
+      overflow-y: hidden ;
       scroll-behavior: smooth;
       scrollbar-width: thin;
     }
     .image-menu img {
       max-height: 250px;
       margin-right: 10px;
-      transition: transform 0.3s;
+      transition: transform 0.6s;
     }
     .image-menu img:hover {
       transform: scale(1.1);
     }
-
-    .slideshadow{
-      box-shadow: 0px 0px 5px  black;
-    }
-
     .arrow-btn {
       display: flex;
       align-items: center;
